TASK-12 - validation of UUID parameters (#10)
