# src/main/java/com/winio94/recruitment/schoolregistration/rest/StudentsController.java
@@ -3,12 +3,14 @@ package com.winio94.recruitment.schoolregistration.rest;
 import com.winio94.recruitment.schoolregistration.api.Course;
 import com.winio94.recruitment.schoolregistration.api.NewStudent;
 import com.winio94.recruitment.schoolregistration.api.Student;
+import com.winio94.recruitment.schoolregistration.api.Uuid;
 import com.winio94.recruitment.schoolregistration.service.StudentsAndCoursesService;
 import com.winio94.recruitment.schoolregistration.service.StudentsService;
 import java.util.Set;
 import javax.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -20,6 +22,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/students")
+@Validated
 public class StudentsController {
 
     private final StudentsService studentsService;
@@ -32,19 +35,20 @@ public class StudentsController {
     }
 
     @GetMapping
-    public Set<Student> getAll(@RequestParam(name = "course", required = false) String courseUuid,
-                               @RequestParam(required = false) boolean notRegisteredToAnyCourse) {
+    public Set<Student> getAll(
+        @RequestParam(name = "course", required = false) @Uuid String courseUuid,
+        @RequestParam(required = false) boolean notRegisteredToAnyCourse) {
         return studentsAndCoursesService.getAllStudentsFiltered(courseUuid,
                                                                 notRegisteredToAnyCourse);
     }
 
     @GetMapping("/{uuid}")
-    public Student getOne(@PathVariable String uuid) {
+    public Student getOne(@PathVariable @Uuid String uuid) {
         return studentsService.getOne(uuid);
     }
 
     @GetMapping("/{uuid}/courses")
-    public Set<Course> courses(@PathVariable String uuid) {
+    public Set<Course> courses(@PathVariable @Uuid String uuid) {
         return studentsAndCoursesService.getAllCoursesFiltered(uuid, false);
     }
 
@@ -55,7 +59,7 @@ public class StudentsController {
     }
 
     @DeleteMapping("/{uuid}")
-    public ResponseEntity<Object> delete(@PathVariable String uuid) {
+    public ResponseEntity<Object> delete(@PathVariable @Uuid String uuid) {
         studentsService.delete(uuid);
         return ResponseEntity.noContent().build();
     }
